--- a/index.html
+++ b/index.html
@@ -98,17 +98,19 @@
         </div>
       </div>
       <div class="prefecture-neighborhood-section">
-        <div>
-          <div class="prefecture-in-focus"><img src="./assets/Image (8).svg" alt=""></div>
+        <div class="prefecture-text-img">
+         <img src="./assets/Image (6).png" alt="">
+         <div class="text">
           <h1>Prefecture in Focus: Tottori</h1>
-          <h2>Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </h2>
+          <h2>Tottori, a prefecture on Honshu Island's Sea of Japan coast, offers stunning sand dunes, scenic mountains, hot springs, temples, fresh seafood, Wagyu beef, and local specialties like Tottori dango. Visitors can enjoy outdoor activities such as hiking, skiing, and sandboarding.</h2>
           <h3>VIEW PREFECTURE <img src="./assets/Shape.svg" alt=""></h3>
+          </div>
         </div>
-        <div>
-          <div class="feautured-neighborhood"><img src="./assets/Image (9).svg" alt=""></div>
-          <h1>Featured Neighborhood: Kyoto’s Arashiyama</h1>
-          <h2>Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </h2>
-          <h3>VIEW NEIGHBORHOOD <img src="./assets/Shape.svg" alt=""></h3>
+        <div class="neighborhood-text-img">
+          <img src="./assets/Image (7).png" alt="">
+          <h4>Featured Neighborhood: Kyoto’s Arashiyama</h4>
+          <h5>Arashiyama in Kyoto is a beautiful district famous for its autumn foliage and attractions such as the bamboo forest, Tenryu-ji Temple, Monkey Park, and charming streets with shops, cafes, and restaurants, making it a must-visit destination for those exploring Kyoto.</h5>
+          <h6>VIEW NEIGHBORHOOD <img src="./assets/Shape.svg" alt=""></h6>
         </div>
       </div>
     </div>
