--- a/index.html
+++ b/index.html
@@ -108,9 +108,11 @@
         </div>
         <div class="neighborhood-text-img">
           <img src="./assets/Image (7).png" alt="">
+          <div class="text-neighborhood">
           <h4>Featured Neighborhood: Kyoto’s Arashiyama</h4>
           <h5>Arashiyama in Kyoto is a beautiful district famous for its autumn foliage and attractions such as the bamboo forest, Tenryu-ji Temple, Monkey Park, and charming streets with shops, cafes, and restaurants, making it a must-visit destination for those exploring Kyoto.</h5>
           <h6>VIEW NEIGHBORHOOD <img src="./assets/Shape.svg" alt=""></h6>
+        </div>
         </div>
       </div>
     </div>
