--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/svg"  href="./assets/odigo-280.svg">
+    <title>Odigo Travel Blog plan your dream trip to Japan</title>
   </head>
   <body>
     <div class="big-box">
       <header>
         <div class="navigation">
-          <img src="./assets/odigo-Logo.svg" alt="" />
+          <img src="./assets/odigo-Logo (2).svg" alt="" />
           <div class="navlinks">
             <a href="">Articles</a>
             <a href="">Locations</a>
@@ -113,6 +114,17 @@
           <h5>Arashiyama in Kyoto is a beautiful district famous for its autumn foliage and attractions such as the bamboo forest, Tenryu-ji Temple, Monkey Park, and charming streets with shops, cafes, and restaurants, making it a must-visit destination for those exploring Kyoto.</h5>
           <h6>VIEW NEIGHBORHOOD <img src="./assets/Shape.svg" alt=""></h6>
         </div>
+        </div>
+      </div>
+      <div class="header">Today top places to visit</div>
+      <div class="nagoya">
+        <div> 
+        <img src="./assets/NAGOYA.png" alt="">
+        </div>
+        <text>Nagoya is a city in Japan, located on the Pacific coast of the island of Honshu. It's known for its castle, automotive industry, unique local cuisine.
+        </text>
+        <div>
+        <button>SEE MORE</button>
         </div>
       </div>
     </div>
