--- a/index.html
+++ b/index.html
@@ -118,15 +118,31 @@
       </div>
       <div class="header">Today top places to visit</div>
       <div class="nagoya">
-        <div> 
-        <img src="./assets/NAGOYA.png" alt="">
+        <div class="image-wrapper">
+          <img src="./assets/NAGOYA.png" alt="">
+          <div class="image-info">
+            <a href="">NAGOYA</a>
+            <a href="">221 <img src="./assets/heart.svg" alt=""></a>
+            <a href="">50 <img src="./assets/comment.svg" alt=""></a>
+          </div>
         </div>
         <text>Nagoya is a city in Japan, located on the Pacific coast of the island of Honshu. It's known for its castle, automotive industry, unique local cuisine.
         </text>
         <div>
-        <button>SEE MORE</button>
+        <button> <link rel="stylesheet" href="https://www.nagoyajo.city.nagoya.jp/en/information/">  SEE MORE</button>
         </div>
       </div>
+     
     </div>
+    <footer>
+      <div class="inside-footer">
+        <img src="./assets/odigo-Logo (4).svg" alt="">
+        <div class="menu-footer">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
