--- a/index.html
+++ b/index.html
@@ -134,13 +134,16 @@
       </div>
      
     </div>
+    <section class="video-section">
+      <img src="./assets/Video.png" alt="">
+    </section>
     <footer>
       <div class="inside-footer">
         <img src="./assets/odigo-Logo (4).svg" alt="">
         <div class="menu-footer">
-          <div></div>
-          <div></div>
-          <div></div>
+          <div class="footer-columns">Company<a href="">About</a><a href="">Team</a><a href="">Careers</a><a href="">Privacy Policy</a></div>
+          <div class="footer-columns">Company<a href="">About</a><a href="">Team</a><a href="">Careers</a><a href="">Privacy Policy</a></div>
+          <div class="footer-columns">Company<a href="">About</a><a href="">Team</a><a href="">Careers</a><a href="">Privacy Policy</a></div>
         </div>
       </div>
     </footer>
